refac(oauth): jpa 컨버터 개선 및 로컬 object mapper 적용 (#13)
- `StringSetToJsonConverter`에서 전역 ObjectMapper 대신 로컬 ObjectMapper 사용.
- 불필요한 어노테이션 제거 및 코드 간소화.
- JSON 직렬화 및 역직렬화 로직 강화: `unwrapIfPolymorphicArray` 메서드 추가.
- 리프레시 토큰 처리 로직 확장: `refreshToken` 데이터 추가 및 정규화.